<resources>
    <string name="app_name">Contacts</string>
    <string name="list_fragment_title">Список контактов</string>
    <string name="details_fragment_title">Детали контакта</string>
    <string name="map_fragment_title">Местоположение контакта</string>
    <string name="route_fragment_title">Местоположения контактов</string>
    <string name="contact_name">Иванов Иван Иванович</string>
    <string name="phone_numbers_title">Телефон</string>
    <string name="emails_title">Почта</string>
    <string name="description_title">Описание</string>
    <string name="birthday">День рождения: </string>
    <string name="notify_about_birthday">Уведомлять о дне рождения</string>
    <string name="notification_title">День рождения контакта</string>
    <string name="notification_text">Сегодня день рождения отмечает %1$s</string>
    <string name="channel_name">channel</string>
    <string name="channel_id">id</string>
    <string name="permission_dialog_title">Требуется разрешение!</string>
    <string name="permission_dialog_message">Для работы приложения необходимо разрешить доступ к контактам.</string>
    <string name="cancel">Отмена</string>
    <string name="ok">Ок</string>
    <string name="search_title">Поиск контакта</string>
    <string name="location_title">Местоположение</string>>
    <string name="address">Адрес: %1$s</string>>
    <string name="saveButtonText">Сохранить</string>>
    <string name="route_title">Построить маршрут</string>>
    <string name="from_title">от</string>>
    <string name="to_title">до</string>>
    <string name="build_a_route">Построить</string>>
    <string name="cannot_build_a_route">Невозможно построить маршрут</string>>
</resources>
