<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/routeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/route_title"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fromTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/routeTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/fromList"
        android:layout_marginTop="6dp"
        android:text="@string/from_title" />

    <Spinner
        android:id="@+id/fromList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/fromTitle"
        app:layout_constraintStart_toEndOf="@id/fromTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:spinnerMode="dialog"/>

    <TextView
        android:id="@+id/toTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fromTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/toList"
        android:text="@string/to_title"/>

    <Spinner
        android:id="@+id/toList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fromList"
        app:layout_constraintStart_toEndOf="@id/toTitle"
        app:layout_constraintEnd_toEndOf="parent"
        android:spinnerMode="dialog"/>


    <Button
        android:id="@+id/routeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_a_route"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/toTitle"
        app:layout_constraintStart_toStartOf="@id/routeTitle"/>

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toTopOf="@id/routeButton"
        app:layout_constraintStart_toEndOf="@id/routeButton"/>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:context=".view.fragment.RouteFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>
